--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -190,7 +190,7 @@ jobs:
         name: x86-config
         path: openwrt/.config
     
-    - name: delete files
+    - name: elete files
       run: |
         cd openwrt 
         bash  rename.sh
