--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -24,7 +24,7 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: x86/feeds.conf.default
+  FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: x86/x86.config
   DIY_P1_SH: x86/diy-part1.sh
   DIY_P2_SH: x86/diy-part2.sh
@@ -59,7 +59,7 @@ jobs:
         echo "-----------------------------硬盘信息---------------------------------------------"
         echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
         echo "硬盘详情："
-        echo " 系统空间       类型     总数   已用  可用  使用率"
+        echo " 系统空间       类型   总数   已用  可用  使用率"
         df -Th
 
     - name: Initialization environment
