--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build x86_64 OpenWrt
+name: x86_64 OpenWrt
 
 on:
   repository_dispatch:
