--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -60,12 +60,10 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         cd openwrt
-        useVersionInfo=$(git show -s --date=short --format="Author: %an<br/>date: %cd<br/>commit: %s<br/>commit hash: %H")
         Author=$(git show -s --date=short --format="Author: %an")
-        Date=$(git show -s --date=short --format="date: %cd")
+        Date=$(git show -s --date=short --format="date: %ci")
         Commit=$(git show -s --date=short --format="commit: %s")
         Hash=$(git show -s --date=short --format="commit hash: %h")
-        echo "useVersionInfo=$useVersionInfo" >> $GITHUB_ENV
         echo "author=$Author" >> $GITHUB_ENV
         echo "date=$Date" >> $GITHUB_ENV
         echo "commit=$Commit" >> $GITHUB_ENV
@@ -103,29 +101,40 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.PACKAGED_STATUS == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        name: R${{ env.DATE }} for ${{ env.FILE_NAME }}
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }} 」固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
         commit: main
         token: ${{ secrets.GH_TOKEN }}
-        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         body: |
-          ⭐️默认 IP：192.168.8.8 默认密码：password
+          *⭐️默认 IP：192.168.8.8 默认密码：password
           *🔥 这是 ARMv8 简化版（带docker），集成一些日常常用插件
+          安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
+          升级 OpenWrt：系统 → 晶晨宝盒 → 手动上传更新 或者 在线下载更新
           当前使用版本:【编译前的最后一次➦[主源码](https://github.com/coolsnowwolf/lede)更新记录】
-          ${{ env.useVersionInfo }}
-
+          ★  感谢源码作者无私分享！
+          🎈🎈🎈 更新信息 🎈🎈🎈
+          🎈 作者: ${{ env.author }}
+          
+          🎈 时间: ${{ env.date }}
+          
+          🎈 内容: ${{ env.commit }}
+          
+          🎈 hash: ${{ env.hash }}
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        
     - name: Telegram notification
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: |
-          💥${{ env.PRODUCT_NAME }}💥打包完成
-          编译时间：${{ env.DATE }}
-          更新信息：
-          作者: ${{ env.author }}
-          时间: ${{ env.date }}
-          内容: ${{ env.commit }}
-          hash: ${{ env.hash }}
+      run: |
+        MSG="
+        💥${{ env.PRODUCT_NAME }}编译完成
+        开始时间：${{ env.DATE }}
+        完成时间：${{ env.DATE1 }}
+        编译耗时：${{ env.time }}
+        🎈🎈🎈 更新信息 🎈🎈🎈
+        作者: ${{ env.author }}
+        时间: ${{ env.date }}
+        内容: ${{ env.commit }}
+        hash: ${{ env.hash }}
+        "
+        curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${MSG}" >/dev/null 2>&1 && echo "ok..."
