--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -6896,7 +6896,7 @@ CONFIG_RPCBIND_RMTCALLS=y
 # CONFIG_PACKAGE_rssileds is not set
 # CONFIG_PACKAGE_rsyslog is not set
 # CONFIG_PACKAGE_safe-search is not set
-CONFIG_PACKAGE_sagernet-core=m
+# CONFIG_PACKAGE_sagernet-core is not set
 # CONFIG_PACKAGE_sagernet-extra is not set
 # CONFIG_PACKAGE_samba36-client is not set
 # CONFIG_PACKAGE_samba36-net is not set
