--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -6963,7 +6963,7 @@ CONFIG_PACKAGE_udpxy=y
 # CONFIG_PACKAGE_usbip is not set
 # CONFIG_PACKAGE_usteer is not set
 CONFIG_PACKAGE_uugamebooster=y
-CONFIG_PACKAGE_v2ray-core=y
+# CONFIG_PACKAGE_v2ray-core is not set
 # CONFIG_PACKAGE_v2ray-extra is not set
 # CONFIG_PACKAGE_vallumd is not set
 CONFIG_PACKAGE_verysync=y
