--- a/.github/workflows/Build_x86_64_518.yml
+++ b/.github/workflows/Build_x86_64_518.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: x86_64_518 OpenWrt
+name: Build_x86_64_518
 
 on:
   repository_dispatch:
@@ -36,7 +36,7 @@ env:
   PRODUCT_NAME: x86_64
 
 jobs:
-  Build-x86-518:
+  Build_x86_64_518:
     runs-on: ubuntu-22.04
 
     steps:
