--- a/.github/workflows/Build_armv8.yml
+++ b/.github/workflows/Build_armv8.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: ARMv8 OpenWrt
+name: Build_armv8
 
 on:
   repository_dispatch:
@@ -36,7 +36,7 @@ env:
   PRODUCT_NAME: ARMv8_ROOTFS
 
 jobs:
-  Build-armv8:
+  Build_armv8:
     runs-on: ubuntu-22.04
 
     steps:
