--- a/.github/workflows/Build_x86_64_518.yml
+++ b/.github/workflows/Build_x86_64_518.yml
@@ -191,7 +191,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' 
       with:
-        name: x86-config
+        name: x86-518-config
         path: openwrt/.config
     
     - name: Delete files
@@ -254,7 +254,7 @@ jobs:
       with:
         token: ${{ secrets.GH_TOKEN }}
         repository: ${{ github.repository }}
-        retain_days: 1
+        retain_days: 6
         keep_minimum_runs: 6
 
     - name: Remove old Releases
