--- a/.github/workflows/Build_x86_64_518.yml
+++ b/.github/workflows/Build_x86_64_518.yml
@@ -192,7 +192,7 @@ jobs:
       if: steps.compile.outputs.status == 'success' 
       with:
         name: x86-518-config
-        path: openwrt/.config
+        path: openwrt/bin/targets/x86/64/config.buildinfo
     
     - name: Delete files
       run: |
