--- a/.github/workflows/Build_x86_64_518.yml
+++ b/.github/workflows/Build_x86_64_518.yml
@@ -226,15 +226,12 @@ jobs:
           - ⭐️这是 ${{ env.PRODUCT_NAME }}
           - 🔥默认IP：192.168.8.3 默认密码：password
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
-          ★  感谢源码作者无私分享！
-          🎈🎈🎈 更新信息 🎈🎈🎈
-          🎈 作者: ${{ env.author }}
-          
-          🎈 时间: ${{ env.date }}
-          
-          🎈 内容: ${{ env.commit }}
-          
-          🎈 hash: ${{ env.hash }}
+          ★ 感谢源码作者无私分享！
+          ★ 更新信息 ★
+          - 作者: ${{ env.author }}
+          - 时间: ${{ env.date }} 
+          - 内容: ${{ env.commit }}        
+          - hash: ${{ env.hash }}
         artifacts: ${{ env.FIRMWARE }}/*
 
     - name: Completion time 
