--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -109,19 +109,16 @@ jobs:
         token: ${{ secrets.GH_TOKEN }}
         body: |
           *⭐️默认 IP：192.168.8.8 默认密码：password
-          *🔥 这是 ARMv8 简化版（带docker），集成一些日常常用插件
-          安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
-          升级 OpenWrt：系统 → 晶晨宝盒 → 手动上传更新 或者 在线下载更新
-          当前使用版本:【编译前的最后一次➦[主源码](https://github.com/coolsnowwolf/lede)更新记录】
-          ★  感谢源码作者无私分享！
+          *🔥 这是 ARMv8-docker ，集成一些日常常用插件
+          - 安装到 EMMC：系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
+          - 升级 OpenWrt：系统 → 晶晨宝盒 → 手动上传更新 或者 在线下载更新
+          - 当前使用版本:【编译前的最后一次➦[主源码](https://github.com/coolsnowwolf/lede)更新记录】
+          ★ 感谢源码作者无私分享！
           🎈🎈🎈 更新信息 🎈🎈🎈
-          🎈 作者: ${{ env.author }}
-          
-          🎈 时间: ${{ env.date }}
-          
-          🎈 内容: ${{ env.commit }}
-          
-          🎈 hash: ${{ env.hash }}
+          - 作者: ${{ env.author }}        
+          - 时间: ${{ env.date }}        
+          - 内容: ${{ env.commit }}        
+          - hash: ${{ env.hash }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         
     - name: Telegram notification
