--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -191,15 +191,12 @@ jobs:
         body: |
           - *🔥 此为ARMv8底包，非完整固件，不可直刷
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
-          ★  感谢源码作者无私分享！
+          ★ 感谢源码作者无私分享！
           🎈🎈🎈 更新信息 🎈🎈🎈
-          🎈 作者: ${{ env.author }}
-          
-          🎈 时间: ${{ env.date }}
-          
-          🎈 内容: ${{ env.commit }}
-          
-          🎈 hash: ${{ env.hash }} 
+          - 作者: ${{ env.author }}        
+          - 时间: ${{ env.date }}       
+          - 内容: ${{ env.commit }}       
+          - hash: ${{ env.hash }} 
         artifacts: ${{ env.FIRMWARE }}/*
 
     - name: Telegram notification
