--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -3466,7 +3466,7 @@ CONFIG_PACKAGE_python3-pymysql=y
 # end of Configuration
 
 # CONFIG_PACKAGE_python3-pymysql-src is not set
-CONFIG_PACKAGE_python3-pynacl=y
+# CONFIG_PACKAGE_python3-pynacl is not set
 # CONFIG_PACKAGE_python3-pynacl-src is not set
 # CONFIG_PACKAGE_python3-pyodbc is not set
 # CONFIG_PACKAGE_python3-pyopenssl is not set
